# ShaderMake

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  cla.yml
include/ShaderMake/: ShaderBlob.h
src/: ComPtr.h  ShaderBlob.cpp  ShaderMake.cpp  argparse.c
